--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
     background-size: cover;
 }
 
-body, #set-crypto {
+body, #set-crypto-btn {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-shadow: 0px 0px 20px #242424;
@@ -39,11 +39,11 @@ div#crypto {
     font-size: 1.3rem;
 }
 
-div#crypto > p {
+div#crypto-bottom > p {
     margin: 0;
 }
 
-#set-crypto {
+#set-crypto-btn {
     background: none;
     border: none;
     font-size: 1.3rem;
